# pandas

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
data/raw/: customers.csv  orders.csv  products.csv
docs/: data_dictionary.md  portfolio_pitch.md
sql/: customer_segments.sql  data_quality_checks.sql  monthly_revenue.sql  top_products.sql
src/retail_pipeline/: __init__.py  config.py  extract.py  load.py  pipeline.py  report.py  transform.py
tests/: test_transform.py
