[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-analytics-pipeline"
version = "0.1.0"
description = "Pipeline de engenharia de dados com Pandas, SQL e relatórios analíticos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.2",
    "SQLAlchemy==2.0.31",
    "python-dotenv==1.0.1",
    "psycopg2-binary==2.9.9",
]

[project.optional-dependencies]
dev = ["pytest==8.2.2"]

[project.scripts]
retail-pipeline = "retail_pipeline.pipeline:run_pipeline"

[tool.setuptools.packages.find]
where = ["src"]
